[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"
priority-queue = "2.1.1"
dary_heap = { version = "0.3.7", features = ["unstable"] }

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"